# lib_paramconfig

./: .gitignore  Cargo.toml  README.md  _Cargo.toml  config_param.toml
example_plugin/: Cargo.toml  config_param.toml
example_plugin/src/: example_fighter.rs  lib.rs
nro/: Cargo.toml  __Cargo.toml  build.ps1  config_param.toml  install.ps1
nro/src/: _main.rs  data.rs  hook.rs  lib.rs  plugin.rs
src/: _lib.rs  app.rs  data.rs  hook.rs  lib.rs  main.rs
