[package]
name = "tomltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
parking_lot = "0.11.2"
hash40 = "1.3.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1