[package]
name = "param_config"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smash_rs = { git = "https://github.com/blu-dev/smash-rs", package = "smash" }
lazy_static = "1.4.0"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
parking_lot = "0.11.2"
hash40 = "1.3.0"
