[package]
name = "param_config_example_nro"
version = "1.0.0"
authors = ["C# <@CSharpM7>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }

param_config = { path = "../" }

lazy_static = "1.4.0"

[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
lto = true